<resources>
    <string name="app_name">Sport News</string>

    <string name="football_title">Football</string>
    <string name="hockey_title">Hockey</string>
    <string name="tennis_title">Tennis</string>
    <string name="basketball_title">Basketball</string>
    <string name="volleyball_title">Volleyball</string>
    <string name="cybersport_title">Cybersport</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="football">football</string>
    <string name="hockey">hockey</string>
    <string name="tennis">tennis</string>
    <string name="basketball">basketball</string>
    <string name="volleyball">volleyball</string>
    <string name="cybersport">cybersport</string>



</resources>
